--- a/README
+++ b/README
@@ -24,6 +24,9 @@ $ pygrep pin yin README
 
 * 主意
 
-- [ ] 高亮匹配
+- [ ] 高亮匹配（也就意味着找出所有匹配，而不仅是第一个）
 - [ ] 输出行号
 - [ ] 多个文件
+- [ ] 按首字母搜索
+- [ ] 按声母搜索
+- [ ] 用声调缩小搜索范围
